[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "pyXhUtils"
version = "1.4.1"
description = "A collection of self dev py library"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
dependencies = [ "tzdata",]
[[project.authors]]
name = "xethhung"
email = "pypi@xethh.dev"

[project.urls]
Homepage = "https://github.com/xh-dev-py/xhUtils"
"Bug Tracker" = "https://github.com/xh-dev-py/xhUtils/issues"
